--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,10 +6,12 @@ body {
 .App {
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+/*sign up css*/
 #long-logo {
   width: 300px;
   margin-bottom: 11px;
@@ -33,6 +35,8 @@ body {
   width: 300px;
 }
 
+/*map css*/
 .svg-inline--fa {
   font-size: 30px;
+  color: red;
 }
