get user location button now working

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,8 +38,8 @@ body {
 /*map css*/
 #btn-location {
   position: absolute;
-  left: 0px;
-  top: 11px;
+  right: 9px;
+  bottom: 10px;
   z-index: 1;
   padding: 6px 8px;
   border: #666 solid;
