--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,18 +42,16 @@ body {
   right: 9px;
   bottom: 10px;
   z-index: 1;
-  padding: 6px 8px;
-  border: #df1f27 solid;
+  padding: 7px 9px;
   border-radius: 4px;
-  background-color: #fff;
+  background-color: #000;
   color: #df1f27;
   font-size: 20px;
 }
 
 /*header bar css*/
 .header-bar {
-  background-color: #fee9a7;
-  border-bottom: #df1f27 solid 5px;
+  background-color: #000;
   width: 100vw;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -72,7 +70,7 @@ body {
   font-size: 12px;
   margin-right: 10px;
   border: #df1f27 solid 0.5px;
-  color: #fee9a7;
+  color: #000;
   padding: 2px 4px;
   background-color: #df1f27;
   border-radius: 5px;
@@ -80,9 +78,8 @@ body {
 
 /*navbar css*/
 .Navbar {
-  border-top: #df1f27 solid 5px;
   align-self: flex-end;
-  background-color: #fee9a7;
+  background-color: #000;
 }
 
 ul {
@@ -103,6 +100,6 @@ li {
 
 .nav-icons {
   font-size: 25px;
-  color: #df1f27;
+  color: #fff;
   text-decoration: none;
 }
