infowindow styles done, tacoplace profile and app info components created and added to navbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -93,6 +93,22 @@ body {
   grid-template-columns: 2fr auto;
   align-items: center;
   text-align: center;
+  margin-top: -85px;
+  margin-left: -45px;
+}
+
+.info-window::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0;
+  height: 0;
+  border: 15px solid transparent;
+  border-top-color: #000000;
+  border-right: 0;
+  margin-left: -17px;
+  margin-bottom: 15px;
 }
 
 .info-window-details {
@@ -176,11 +192,6 @@ a:hover {
   color: #df1f27;
 }
 
-/*all pages css*/
-.page-title {
-  text-align: center;
-}
-
 /*list page css*/
 .tacoplace {
   display: flex;
@@ -218,4 +229,65 @@ a:hover {
 .list-view-details:hover {
   color: #fff;
   background-color: #000;
+}
+
+/*tacoplace page css*/
+.tacoplace-profile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+/*info page css*/
+.info-page {
+  padding: 10px 15px;
+}
+
+.about {
+  font-size: 20px;
+  letter-spacing: 3px;
+  line-height: 30px;
+  text-align: justify;
+}
+#about-intro {
+  font-size: 30px;
+  letter-spacing: 3px;
+  line-height: 40px;
+  text-align: justify;
+  color: #000;
+}
+
+span {
+  font-weight: 900;
+  color: #df1f27;
+}
+
+.contact-box {
+  font-size: 20px;
+  letter-spacing: 3px;
+  line-height: 30px;
+  text-align: center;
+}
+
+.contact {
+  background: #df1f27;
+  color: #fff;
+  border-radius: 5px;
+  padding: 3px 5px;
+  text-decoration: none;
+  text-align: center;
+}
+
+.contact:hover {
+  background-color: #000;
+  color: #fff;
+}
+
+/*add page css*/
+.add-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
