style changes made to tacoplace component and css file organized

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -160,7 +160,7 @@ a:hover {
 }
 
 .place-info.name {
-  color: #1f3fdf;
+  color: #000;
   font-weight: 900;
   font-size: 23px;
 }
@@ -177,10 +177,13 @@ a:hover {
 }
 
 .list-view-details {
-  color: #fff;
+  color: #000;
   padding: 4px;
-  background-color: #df1f27;
+  background-color: #dddddd;
   text-decoration: none;
+  border: solid 1px;
+  border-radius: 5px;
+  font-size: 10px;
 }
 
 .list-view-details:hover {
@@ -198,6 +201,8 @@ a:hover {
   align-items: center;
   color: #df1f27;
   font-weight: bolder;
+  text-align: center;
+  padding: 20px;
 }
 
 .tacoplace-profile {
@@ -214,19 +219,46 @@ a:hover {
   text-align: center;
 }
 
+.profile-title {
+  margin-bottom: 10px;
+}
+
 .image-container {
-  height: 200px;
-  width: 200px;
+  height: 300px;
+  width: 100%;
   background-color: #333;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #fff;
+  margin-bottom: 10px;
+}
+
+.profile-address {
+  margin-bottom: 10px;
+}
+
+.directions {
+  margin-bottom: 10px;
+  border: 1px solid;
+  padding: 10px 40px;
+  border-radius: 5px;
+  background-color: #dddddd;
 }
 
 .profile-ratings {
+  font-size: 30px;
   color: #df1f27;
   text-align: center;
+  margin-bottom: 10px;
+}
+
+.reviews-title {
+  margin-bottom: 10px;
+}
+
+.no-reviews {
+  margin-bottom: 10px;
 }
 
 /*************************************/
@@ -329,6 +361,7 @@ span {
   letter-spacing: 3px;
   line-height: 30px;
   text-align: center;
+  margin-bottom: 60px;
 }
 
 .contact {
