add form working as expexpected, app is finished, as far as I will take it, moving forward with tacomaps

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -342,6 +342,15 @@ label {
   padding: 20px;
 }
 
+.added {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 40px;
+}
+
 /*************************************/
 /*************   INFO   **************/
 /*************************************/
