--- a/client/src/App.css
+++ b/client/src/App.css
@@ -212,8 +212,8 @@ a:hover {
 }
 
 .image-container {
-  height: 300px;
-  width: 100%;
+  height: 200px;
+  width: 200px;
   background-color: #333;
   display: flex;
   justify-content: center;
@@ -351,6 +351,10 @@ label {
   padding: 40px;
 }
 
+.input-boxes {
+  border: 1px #000 solid;
+}
+
 /*************************************/
 /*************   INFO   **************/
 /*************************************/
@@ -363,13 +367,6 @@ label {
   letter-spacing: 3px;
   line-height: 30px;
   text-align: justify;
-}
-#about-intro {
-  font-size: 30px;
-  letter-spacing: 3px;
-  line-height: 40px;
-  text-align: justify;
-  color: #000;
 }
 
 span {
